# hypersonics-cfd

./: .gitignore  README.md  pyproject.toml
docs/: repository-redesign-report.md  shock-extraction-notes.md
orion/: SHOCK_EXTRACTION_REPORT.md  shock_extract_1249732.err  shock_extract_1249732.out
orion/cases/: m3_fine  m6_fine  m9_fine
orion/cases/m1.5_aoa0/: history.csv  orion_1228482.err  orion_1228482.out  shock_extract_1249695.out
orion/cases/m1.5_aoa15/: history.csv  orion_1228483.err  orion_1228483.out
orion/cases/m1.5_aoa24/: history.csv  (+1 more)
orion/config/: base.cfg  cases.toml
orion/scripts/: case_cli.py  check_convergence.py  export_density_gradient_slice.py  extract_shock_surface.py  extract_shock_surface_rectangular.py  setup_cases.py  shock_geometry.py  submit_cases.py  submit_shock_surface.py
scripts/: _bootstrap.py  case_selection.py  check_convergence.py  collect_small_outputs.py  export_density_gradient_slice.py  export_flow_slices.py  export_initial_search_line.py  extract_shock_surface.py  extract_shock_surface_rectangular.py  layout.py  pull_cluster_results.sh  setup_cases.py  shock_geometry.py  submit_cases.py  submit_shock_extraction.py  submit_shock_surface.py
src/hypersonics_cfd/: __init__.py  artifacts.py  check_convergence.py  collect_small_outputs.py  export_density_gradient_slice.py  extract_shock_surface.py  layout.py  setup_cases.py  submit_cases.py  submit_shock_surface.py
studies/ellipsoids/: README.md
studies/orion/: README.md  study.toml
templates/slurm/: run_shock_extraction.sh  run_su2_case.sh
templates/su2/: base.cfg
(+275 files in other folders)
